# CartesianInterface

./: .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  README.md  design.html  frames.gv  genindex.html  index.html  install.html  objects.inv  package.xml  plugins.html  plugins_ros.html  plugins_sot.html  plugins_task.html  porting.html  problemdesc.html  progr_cpp.html  progr_py.html  quickstart.html  rosapi.html  search.html  searchindex.js
_sources/: design.rst.txt  design.txt  index.rst.txt  index.txt  install.txt  plugins.rst.txt  plugins.txt  plugins_ros.txt  plugins_sot.rst.txt  plugins_task.rst.txt  porting.rst.txt  problemdesc.rst.txt  problemdesc.txt  progr_cpp.rst.txt  progr_py.rst.txt  quickstart.rst.txt  quickstart.txt  rosapi.rst.txt
_static/: tutorial_nb.html
action/: ReachPose.action
bindings/python/: CMakeLists.txt  interactive_client.py  pyAffine3d.cpp  pyForceEstimation.cpp  pyImpedance.cpp  pyRosImpl.cpp  pyRosImpl.h  pyRosInit.cpp  pyci_all.py
cmake/: ExportCartesianInterface.cmake  GenerateDeb.cmake  cartesian_interface-extras.cmake.in  cartesian_interfaceConfig.cmake.in
docs/: Doxyfile  Makefile
examples/: CMakeLists.txt  CartesianMarkerNode.cpp  CartesianMarker_exmaple.launch  CogimonRosControl.py  PickBoxPoses.py  PickBoxStateMachine.py  ReachActionCogimonExample.py  ReachActionCogimonExampleBackHome.py  ReachActionCogimonExampleDown.py  ReachActionCogimonExampleDown2.py  ReachActionCogimonExamplePassBox.py  ReachActionCogimonExampleUp.py  ReachActionExample.py
examples/configs/: centauro_basic_stack.yaml  centauro_car_model_stack.yaml  centauro_com_control.yaml  centauro_simple_stack.yaml  centauro_static_stability_stack.yaml  cogimon_simple_stack.yaml  coman_manipulability.yaml  coman_min_effort.yaml  coman_stack.yaml  coman_stack_alternative.yaml  lwr_simple_stack.yaml
examples/cpp/: CMakeLists.txt  cartesio_solver.cpp
examples/launch/: cartesio_cogimon.launch  centauro.launch  centauro_car_model.launch  centauro_force_estimation.launch  centauro_gcomp.launch  cogimon.launch  coman.launch  coman.launch.xml  coman_acceleration_max_computer.launch
examples/mesh/coman/: Waist.capsule
examples/plugin/: CMakeLists.txt
examples/plugin/angular_mom/: CMakeLists.txt
examples/plugin/angular_mom/src/: AngularMomentum.cpp  AngularMomentum.h  AngularMomentumRos.cpp  AngularMomentumRos.h  OpenSotAngularMomentum.cpp  OpenSotAngularMomentum.h
examples/plugin/manipulability/: CMakeLists.txt
examples/plugin/manipulability/src/: Manipulability.cpp  Manipulability.h  OpenSotManipulability.cpp  OpenSotManipulability.h
examples/plugin/min_effort/: CMakeLists.txt
examples/plugin/min_effort/src/: MinEffort.cpp  MinEffort.h  OpenSotMinEffort.cpp  OpenSotMinEffort.h
examples/python/: py_demo_example.py  py_demo_example_poses.py  py_minimal_example.py  py_ros_example.py  ros_client_example.ipynb
examples/python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  ros_client_example-checkpoint.ipynb
examples/rviz/: disp.rviz
examples/srdf/: coman.srdf
examples/urdf/: coman.urdf
launch/: acceleration_max_computer.launch  aeronav.launch  cartesian_analyzer.launch  cartesian_server.launch  cartesio.launch  cartesio.launch.xml  cartesio_ik_problem.launch  cartesio_include.launch  joy_test.yaml  joystick.launch  joystick_test.launch  postural_gui.launch
msg/: CartesianImpedance.msg  CartesianImpedanceBase.msg  CartesianImpedanceTimed.msg  CartesianTaskInfo.msg  CartesioJoyStick.msg  ForceEstimationMsg.msg  Impedance6.msg  Interaction.msg  InteractionTaskInfo.msg  JoystickStatus.msg  ReferenceStamped.msg  TaskInfo.msg
reference/: cartesian.html  cartesian_ifc.html  limits.html  postural.html  problem.html  sdk.html  sot_adapter.html  task.html  trajectory.html
src/: BackendExample.cpp  CartesianAnalyzer.cpp  CartesianInterfaceImpl.cpp  CartesianMarker.cpp  ConstraintImpl.cpp  Context.cpp  ForceEstimation.cpp  JoyStick.cpp  JoyStickSpawner.cpp  LockfreeBufferImpl.cpp  ManipulabilityAnalyzer.cpp  MarkerSpawner.cpp  OpenSotImpl.cpp  ProblemDescription.cpp  RosExecutor.cpp  RosImpl.cpp  RosServer.cpp  RosServerClass.cpp  RosServerNode.cpp  RosServerNode.cpp.orig  Spline.cpp  TaskImpl.cpp  TorqueFeedforward.cpp  Trajectory.cpp  WorldConnecter.cpp  postural_gui
src/ros/: AccMaxComputerNode.cpp  Aeronav.cpp  AeronavSpawner.cpp  CMakeLists.txt  CartesianAnalyzer.cpp  CartesianMarker.cpp  ForceEstimationNode.cpp  JoyStick.cpp  JoyStickSpawner.cpp  MarkerSpawner.cpp  RobotDescriptionPublisher.cpp  RosContext.cpp  RosContext.h  RosControlTopicApi.cpp  RosExecutor.cpp  RosImpl.cpp  RosServerClass.cpp  RosServerNode.cpp  TorqueFeedforward.cpp  package.xml
src/ros/action/: ReachCartesianImpedance.action
src/ros/api/: CartesianRos.cpp  CartesianRos.h  TaskRos.cpp  TaskRos.h
src/ros/client_api/: CartesianRos.cpp  CartesianRos.h  InteractionRos.cpp  PosturalRos.cpp  PosturalRos.h  TaskRos.cpp  TaskRos.h
src/ros/msg/: CartesianImpedance.msg  CartesianTaskInfo.msg  Impedance3.msg  InteractionTaskInfo.msg  TaskInfo.msg
src/ros/server_api/: CartesianRos.cpp  CartesianRos.h  InteractionRos.cpp  InteractionRos.h  PosturalRos.cpp  PosturalRos.h  TaskRos.cpp  TaskRos.h
src/ros/srv/: GetCartesianTaskInfo.srv  GetImpedance.srv  GetTaskInfo.srv  GetTaskList.srv  ResetJoints.srv  SetBaseLink.srv  SetContactFrame.srv  SetImpedance.srv  SetJoystickActiveTask.srv  SetJoystickTaskBaseFrame.srv  SetJoystickTaskMaxSpeed.srv  SetLambda.srv  SetLambda2.srv
src/ros/utils/: ManipulabilityAnalyzer.cpp  RobotStatePublisher.cpp  RobotStatePublisherNode.cpp  RosUtils.h
srv/: GetCartesianTaskInfo.srv  GetControlMode.srv  GetForceLimits.srv  GetImpedance.srv  GetInteractionTaskInfo.srv  GetTaskInfo.srv  GetTaskList.srv  GetTaskState.srv  LoadController.srv  ResetWorld.srv  SetControlMode.srv  SetForceLimits.srv  (+12 more)
tests/: CMakeLists.txt  TestAlglib.cpp  TestApi.cpp  TestCartesian.cpp  TestOpensot.cpp  TestRos.cpp  TestRosClient.cpp  TestRt.cpp  TestTask.cpp  joystick_test.launch  testutils.h
tests/configs/: centauro.srdf  centauro.urdf  centauro_test_stack.yaml
(+252 files in other folders)
