add_subdirectory(plugin)

add_subdirectory(cpp)

set(AMENT_PACKAGE_SHARE_DESTINATION "share/${PROJECT_NAME}")

install(DIRECTORY configs/
  DESTINATION ${AMENT_PACKAGE_SHARE_DESTINATION}/examples/configs
  FILES_MATCHING PATTERN "*.yaml"
)

install(DIRECTORY launch/
  DESTINATION ${AMENT_PACKAGE_SHARE_DESTINATION}/examples/launch
  FILES_MATCHING PATTERN "*.launch.*"
)

install(DIRECTORY mesh/
  DESTINATION ${AMENT_PACKAGE_SHARE_DESTINATION}/examples/mesh
)

install(DIRECTORY srdf/
  DESTINATION ${AMENT_PACKAGE_SHARE_DESTINATION}/examples/srdf
)

install(DIRECTORY urdf/
  DESTINATION ${AMENT_PACKAGE_SHARE_DESTINATION}/examples/urdf
)

install(DIRECTORY rviz/
  DESTINATION ${AMENT_PACKAGE_SHARE_DESTINATION}/examples/rviz
)

install(DIRECTORY python/
  DESTINATION ${AMENT_PACKAGE_SHARE_DESTINATION}/examples/python
)

